--- a/StudentExercisesWebApp/Views/Exercises/Details.cshtml
+++ b/StudentExercisesWebApp/Views/Exercises/Details.cshtml
@@ -22,6 +22,17 @@
         <dd>
             @Html.DisplayFor(model => model.Language)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentExercises)
+        </dt>
+        <dd>
+            <ul>
+                @foreach (StudentExercise se in Model.StudentExercises)
+                {
+                    <li>@se.Student.FirstName</li>
+                }
+            </ul>
+        </dd>
     </dl>
 </div>
 <div>
